added homepage to composer.json

--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
         {
             "name": "Chris Gmyr",
             "email": "cgmyr@spartzinc.com",
+            "homepage": "https://github.com/cmgmyr",
             "role": "Developer"
         }
     ],
