--- a/.travis.yml
+++ b/.travis.yml
@@ -4,12 +4,7 @@ php:
   - 5.4
   - 5.5
   - 5.6
-  - 7.0
   - hhvm
-
-matrix:
-  allow_failures:
-    - php: 7.0
 
 before_script:
   - travis_retry composer self-update
@@ -19,4 +14,4 @@ script:
   - phpunit --coverage-text --coverage-clover=coverage.clover
 
 after_script:
-  - if [ "$TRAVIS_PHP_VERSION" != "nightly" && "$TRAVIS_PHP_VERSION" != "hhvm" ]; then php vendor/bin/ocular code-coverage:upload --format=php-clover coverage.clover; fi
+  - if [ "$TRAVIS_PHP_VERSION" != "hhvm" ]; then php vendor/bin/ocular code-coverage:upload --format=php-clover coverage.clover; fi
