--- a/composer.json
+++ b/composer.json
@@ -1,31 +1,32 @@
 {
-    "name": "spartz/text-formatter",
+    "name": "cmgmyr/title-formatter",
     "description": "A simple to use text formatter, primarily used for page/blog titles",
     "license": "MIT",
     "authors": [
         {
             "name": "Chris Gmyr",
-            "email": "cgmyr@spartzinc.com",
+            "email": "cmgmyr@gmail.com",
             "homepage": "https://github.com/cmgmyr",
             "role": "Developer"
         }
     ],
     "require": {
-        "php" : ">=5.4.0",
+        "php" : "~7.1",
         "ext-mbstring" : "*"
     },
     "require-dev": {
-        "phpunit/phpunit" : "4.*",
-        "scrutinizer/ocular": "~1.1"
+        "phpunit/phpunit" : ">=7.0",
+        "scrutinizer/ocular": "^1.5",
+        "friendsofphp/php-cs-fixer": "^2.14"
     },
     "autoload": {
         "psr-4": {
-            "Spartz\\TextFormatter\\": "src"
+            "Cmgmyr\\TitleFormatter\\": "src"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "Spartz\\TextFormatter\\Test\\": "tests"
+            "Cmgmyr\\TitleFormatter\\Test\\": "tests"
         }
     },
     "extra": {
