--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,8 @@
         "ext-mbstring" : "*"
     },
     "require-dev": {
-        "phpunit/phpunit" : ">=7.0",
-        "friendsofphp/php-cs-fixer": "^2.14"
+        "friendsofphp/php-cs-fixer": "^2.14",
+        "phpunit/phpunit" : ">=7.0"
     },
     "autoload": {
         "psr-4": {
@@ -28,9 +28,16 @@
             "Cmgmyr\\TitleFormatter\\Test\\": "tests"
         }
     },
+    "scripts": {
+        "test": "vendor/bin/phpunit",
+        "fix-style": "vendor/bin/php-cs-fixer fix"
+    },
     "extra": {
         "branch-alias": {
             "dev-master": "1.0-dev"
         }
+    },
+    "config": {
+        "sort-packages": true
     }
 }
