--- a/composer.json
+++ b/composer.json
@@ -11,31 +11,26 @@
         }
     ],
     "require": {
-        "php" : "~7.1",
+        "php" : "^8.0",
         "ext-mbstring" : "*"
     },
     "require-dev": {
-        "friendsofphp/php-cs-fixer": "^2.14",
-        "phpunit/phpunit" : ">=7.0"
+        "friendsofphp/php-cs-fixer": "^3.2",
+        "phpunit/phpunit": "^9.3.3"
     },
     "autoload": {
         "psr-4": {
-            "Cmgmyr\\TitleFormatter\\": "src"
+            "Cmgmyr\\TitleFormatter\\": "src/"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "Cmgmyr\\TitleFormatter\\Test\\": "tests"
+            "Cmgmyr\\TitleFormatter\\Tests\\": "tests/"
         }
     },
     "scripts": {
         "test": "vendor/bin/phpunit",
-        "fix-style": "vendor/bin/php-cs-fixer fix"
-    },
-    "extra": {
-        "branch-alias": {
-            "dev-master": "2.0-dev"
-        }
+        "format": "vendor/bin/php-cs-fixer fix"
     },
     "config": {
         "sort-packages": true
